# cvpr15deepcompare

./: .gitmodules  CMakeLists.txt  Makefile  README.md  download_pack.sh  loader.cpp  loader.h  run_test.sh  test.cpp  wrapper.cpp
matlab/: deepcompare.cpp  make.m
opencv/: CMakeLists.txt  example.cpp  example.cu
pytorch/: README.md  create_dataset_file.py  eval.py  requirements.txt
src/: loader.cpp  loader.cu  test.cu  wrapper.h
training/: FPR95Meter.lua  README.md  train.lua
training/models/: 2ch.lua  2ch2stream.lua  2chavg.lua  2chdeep.lua  siam.lua  siam2stream.lua  utils.lua
